--- a/_config.yml
+++ b/_config.yml
@@ -93,8 +93,8 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 # theme: landscape
+#theme:3-hexo 
 theme: ace
-
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
