--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: Mr.'s Space
+subtitle: '随随便便的记录'
 description: ''
 keywords:
-author: John Doe
-language: en
+author: Mr. Q
+language: zh-CN
 timezone: ''
 
 # URL
