--- a/themes/ace/_config.yml
+++ b/themes/ace/_config.yml
@@ -17,8 +17,8 @@ jquery_CDN: https://cdn.staticfile.org/jquery/2.2.4/jquery.min.js
 
 # Sidebar settings
 sidebar: true                       # whether or not using Sidebar.
-sidebar-about-description: "INNOVATION IS KING!"
-sidebar-avatar: /img/avatar/logo.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "努力工作，享受生活"
+sidebar-avatar: /img/avatar/headimage.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 widgets:
 - featured-tags
 - short-about
@@ -38,8 +38,8 @@ featured-condition-size: 0              # A tag will be featured if the size of 
 ## Friends
 friends: [
     {
-        title: "ACE theme",
-        href: "http://www.sumoon.com"
+        title: "test",
+        href: "http://www.test.com"
     }
 #    ,
 #    {
@@ -50,25 +50,25 @@ friends: [
 ## Nav Menus
 navmenu: [
 {
-   title: "menu1",
+   title: "阅读",
    url: "#",        
 },
 {
-   title: "menu2",
-   url: "#",        
+   title: "杂类",
+   url: "#/tags",        
 },
 {
-   title: "menu3",
-   url: "#",        
+   title: "About me",
+   url: "/about",        
 },
-{
-   title: "menu3",
-   url: "#",        
-},
-{
-   title: "menu5",
-   url: "#",        
-}
+# {
+#    title: "menu3",
+#    url: "#",        
+# },
+# {
+#    title: "menu5",
+#    url: "#",        
+# }
 ]
 #sticky post tag
 sticky_tag: "Sticky"
@@ -84,11 +84,11 @@ ga_domain:
 # SNS settings
 # SNS Share
 # Reference: https://github.com/overtrue/share.js
-share: true
+share: false
 # RSS: false
 # weibo_username:     Demonbaneen
 # zhihu_username:     Demonbane
-github_username:    kinggozhang
+github_username:    xxx
 # twitter_username:   Demonbane_x
 # facebook_username:  xxx
 # linkedin_username:  xxx
